--- a/Front-end/src/app/home/home.component.html
+++ b/Front-end/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<div class="img"></div>
+<div class="img">
+    <div class="description"></div>
+    <div class="img_content"></div>
+</div>
 <div class="background">
     
 </div>
