--- a/Front-end/src/app/trainings/trainings.component.html
+++ b/Front-end/src/app/trainings/trainings.component.html
@@ -28,7 +28,7 @@
             </div>   
         </div>
     </div>
-    <div class="create"><button type="submit">Offer a course</button></div>
+    <div class="create"><button type="submit" (click)="addCourse()">Offer a course</button></div>
 </div>
 
 <div class="courses_wrapper">
@@ -55,100 +55,75 @@
         
     </div>
     <div class="courses">
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="description">Provider : Zalaria Zanati</div>
+        <div *ngFor="let course of courses">
+            <div class="course">
+                <div class="course_img">
+                    <div *ngIf="course.imageBytes; else elseBlock">
+                        <img [src]="course.imageBytes" alt="">
+                    </div>
+                    <ng-template #elseBlock><img src="../../../assets/defaultpng.png"></ng-template>
+                </div>
+                <div class="name">{{course.name}}</div>
+                <div class="day">Date : {{course.date}} at 16h</div>
+                <div class="duration">Duration : 2h</div>
+                <div class="description">Provider : {{course.providerUserName}}</div>
+            </div>
         </div>
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="description">Provider : Zalaria Zanati</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="location">Location : Paris</div>
-            
-        </div>
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="description">Provider : Zalaria Zanati</div>
-        </div>
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="description">Provider : Zalaria Zanati</div>
-        </div>
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="description">Provider : Zalaria Zanati</div>
-        </div>
-        <div class="course">
-            <div class="course_img"></div>
-            <div class="name">Course Name</div>
-            <div class="day">Date : 10/12/2020 at 16h</div>
-            <div class="duration">Duration : 2h</div>
-            <div class="description">Provider : Zalaria Zanati</div>
-        </div>
+        <ul class="pagination justify-content-center">
+            <li class="page-item"><a (click)="previousClick()" class="page-link">Previous</a></li>
+            <li *ngFor='let index of pageIndexes' class="page-item" [ngClass]="active(index)">
+                    <a (click)="getPaginationWithIndex(index)" class="page-link">
+                      {{index + 1}}
+                    </a>
+            </li>
+            <li class="page-item"><a (click)="nextClick()" class="page-link">Next</a></li>
+        </ul>
     </div>
 </div>
 
-<div >
-    <div class="group_wrapper">
+<div *ngIf="showForm">
+    <div class="course_wrapper">
         <div class="header">
             <div>Create a course </div>
-            <div class="exit"><i class="fas fa-times"></i></div>
+            <div class="exit" (click)="addCourse()"><i class="fas fa-times"></i></div>
         </div>
-        <form>
+        <form [formGroup]="courseForm" (ngSubmit)="createCourse()">
             <div class="body">
                 <div class="img">
-                    <div >
-                        <img>
+                    <div *ngIf="imgURL">
+                        <img [src]="imgURL">
                     </div>
-                    <ng-template #elseBlock><img src="../../../assets/defaultpng.png"></ng-template>
-                    <input #file type="file" id="file">
+                    <input #file type="file" id="file" (change)="onFileChanged($event)" (change)="preview(file.files)">
                     <label for="file"><i class="fas fa-edit"></i></label>
                 </div>
-                <div class="img_select"></div>
                 <div class="infos">
                     <div class="name">
-                        <label for="name">Course name</label><br>
+                        <label for="name">Course name</label>
                         <input [formControlName]="'name'" type="text" id="name">
                     </div>
-                    <div class="name">
-                        <label for="name">Date : </label>
-                        <input [formControlName]="'name'" type="date" id="name">
-                        <label for="name">Hour : </label>
-                        <input [formControlName]="'name'" type="time" id="name">
+                    <div class="category">
+                        <label for="category">Category</label>
+                        <select [formControlName]="'category'" id="category">
+                            <option *ngFor="let categ of categories" [ngValue]="categ">{{categ}}</option>
+                        </select>
                     </div>
-                    <div class="name">
-                        <label for="name">Duration : </label>
-                        <input [formControlName]="'name'" type="time" id="name">
-                    </div>
-                    <div class="name">
-                        <label for="name">Online :</label>
-                        Yes <input type="checkbox" name="yes" id=""> No <input type="checkbox" name="no" id="">
+                    <div class="date">
+                        <label for="date">Date </label>
+                        <input [formControlName]="'date'" type="date">
+                        <label for="duration">Duration </label>
+                        <input [formControlName]="'duration'" type="time" id="duration">
                     </div>
                     <div class="description">
                         <label for="desc">Course description</label><br>
-                        <textarea [formControlName]="'description'" name="desc" id="desc" cols="20" rows="6"></textarea>
+                        <textarea [formControlName]="'description'" name="desc" id="desc" cols="22" rows="4"></textarea>
                     </div>
-                    <div class="name">
-                        <label for="name">Course Link</label><br>
-                        <input [formControlName]="'name'" type="text" id="name">
+                    <div class="link">
+                        <label for="link">Course Link</label>
+                        <input [formControlName]="'link'" type="text">
                     </div>
-                    <div class="name">
-                        <label for="name">Course Location</label><br>
-                        <input [formControlName]="'name'" type="text" id="name">
+                    <div class="location">
+                        <label for="location">Course Location</label>
+                        <input [formControlName]="'location'" type="text" >
                     </div>
                 </div>
             </div>
