--- a/Front-end/src/styles.css
+++ b/Front-end/src/styles.css
@@ -29,3 +29,5 @@ input.ng-invalid.ng-touched{
   padding: 3px 16px;
   opacity: 1;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
