--- a/Front-end/src/app/trainings/trainings.component.css
+++ b/Front-end/src/app/trainings/trainings.component.css
@@ -148,7 +148,8 @@
 }
 
 .course{
-    height: 400px;
+    height: 300px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     border: 2px solid royalblue;
@@ -157,13 +158,14 @@
 }
 
 .course_img{
+    width: 100%;
     height: 150px;
     position: relative;
 }
 
 .course_img img{
     height: 150px;
-    width: 200px;
+    width: 100%;
     position: relative;
 }
 
@@ -175,7 +177,6 @@
 
 .course div{
     font-family: Arial, Helvetica, sans-serif;
-    padding: 0 10px;
 }
 
 .course_wrapper{
