--- a/Front-end/src/app/trainings/trainings.component.css
+++ b/Front-end/src/app/trainings/trainings.component.css
@@ -166,6 +166,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid royalblue;
+    border-radius: 7px;
     outline: none;
     padding-bottom: 20px;
 }
@@ -173,13 +174,13 @@
 .course_img{
     width: 100%;
     height: 150px;
-    position: relative;
 }
 
 .course_img img{
     height: 150px;
     width: 100%;
-    position: relative;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 
 .course>.name{
@@ -188,8 +189,35 @@
     padding: 10px 0;
 }
 
-.course div{
+.course .info{
     font-family: Arial, Helvetica, sans-serif;
+    padding: 2px 8px;
+}
+
+.course .details{
+    align-self: flex-end;
+    padding: 2px 10px;
+}
+
+.details button{
+    color: white;
+    background-color: royalblue;
+    border: none;
+    outline: none;
+    padding: 2px 6px;
+    border-radius: 5px;
+}
+.details button:hover{
+    background-color: #6180df;
+}
+
+.course_details{
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 200%;
+    transform: translate(-50%, 0);
+
 }
 
 .course_wrapper{
