user connections rest api

--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -10,6 +10,7 @@
         <div *ngIf="isLoggedIn" class="sign-in">
             <div class="one">
                 <app-notifications></app-notifications>
+                <app-connections></app-connections>
             </div>
             <div class="two">
                 <a class="profile" routerLink="/profile">
