--- a/Front-end/src/app/connections/connections.component.css
+++ b/Front-end/src/app/connections/connections.component.css
@@ -1,5 +1,5 @@
 
-.notification{
+.connections{
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -9,11 +9,11 @@
     align-items: center;
     cursor: pointer;
 }
-.notification:hover{
+.connections:hover{
     background-color: rgb(192, 192, 192);
 }
 
-.connections_container{
+.notifications_container{
     position: absolute;
     background-color: rgb(241, 241, 241);
     width: 300px;
@@ -32,14 +32,14 @@
     padding: 5px;
 }
 
-.notif{
+.requests{
     font-family: sans-serif;
     background-color: white;
     padding: 5px;
     cursor: pointer;
     border-top: 1px solid #797878;
 }
-.notif:hover{
+.requests:hover{
     background-color: rgb(223, 223, 223);
 }
 
