user connections service

--- a/Front-end/src/app/connections/connections.component.html
+++ b/Front-end/src/app/connections/connections.component.html
@@ -1,4 +1,4 @@
-<div (click)="showRequests()" [class.new] = "new" class="connections"><i class="fas fa-users"></i><span *ngIf="new">{{count}}</span></div>
+<div (click)="showRequests()" [class.new] = "new" class="connections"><i class="fas fa-user-plus"></i><span *ngIf="new">{{count}}</span></div>
 <div *ngIf="show" class="connections_container">
     <div class="title">Connection requests</div>
     <div class="requests" >
