--- a/Front-end/src/app/profile/profile.component.css
+++ b/Front-end/src/app/profile/profile.component.css
@@ -72,6 +72,23 @@
     display: flex;
     flex-direction: column;
 }
+
+.connect{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 30px;
+}
+.connect button{
+    padding: 4px 6px;
+    color: white;
+    background-color:  #3083bb;
+    border: none;
+    outline: none;
+}
+.connect button:hover{
+    background-color:  #54a0d3;
+}
 .img{
     width: 100%;
     height: 250px;
@@ -81,7 +98,7 @@
 .infos{
     display: flex;
     flex-direction: column;
-    margin: 80px auto;
+    margin: 30px auto;
 }
 
 .info{
@@ -102,7 +119,7 @@
 
 .update>button{
     padding: 6px 12px;
-    background-color: rgb(48, 131, 187);
+    background-color: #3083bb;
     color: white;
     font-weight: bold;
     border-radius: 10px;
