--- a/Front-end/src/app/connections/connections.component.css
+++ b/Front-end/src/app/connections/connections.component.css
@@ -13,7 +13,8 @@
     background-color: rgb(192, 192, 192);
 }
 
-.notifications_container{
+.connections_container{
+    
     position: absolute;
     background-color: rgb(241, 241, 241);
     width: 300px;
@@ -36,11 +37,7 @@
     font-family: sans-serif;
     background-color: white;
     padding: 5px;
-    cursor: pointer;
     border-top: 1px solid #797878;
-}
-.requests:hover{
-    background-color: rgb(223, 223, 223);
 }
 
 .new{
@@ -57,4 +54,47 @@
     background-color: red;
     border-radius: 50%;
     margin-left: 17px;
+}
+
+.request{
+    display: flex;
+    margin-bottom: 10px;
+}
+.img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: black;
+    margin-right: 10px;
+}
+
+.img img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.name{
+    margin-bottom: 10px;
+}
+
+.opt{
+    width: 200px;
+}
+
+.response button{
+    width: 80px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    color: white;
+}
+.accept{
+    margin-right: 10px;
+    background-color: #02f102;
+}
+
+.reject{
+    background-color: red;
 }
