--- a/Front-end/src/app/notifications/notifications.component.css
+++ b/Front-end/src/app/notifications/notifications.component.css
@@ -13,13 +13,13 @@
     background-color: rgb(192, 192, 192);
 }
 
-.connections_container{
+.notifications_container{
     position: absolute;
     background-color: rgb(241, 241, 241);
     width: 300px;
     max-height: 300px;
     top: 60px;
-    right: 350px;
+    right: 370px;
     border-radius: 5px;
     border: 3px solid rgb(121, 120, 120);
     display: flex;
