--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -193,7 +193,6 @@ input[type="file"]{
 .conn_img{
     height: 80px;
     width: 80px;
-    background-color: black;
     margin: 10px 0 15px;
     border-radius: 50%;
 }
@@ -201,6 +200,7 @@ input[type="file"]{
 .conn_img img{
     height: 80px;
     width: 80px;
+    border-radius: 50%;
 }
 
 .conn_name{
