--- a/Front-end/src/app/auth/user-profile/user-profile.component.html
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.html
@@ -75,18 +75,15 @@
             <div *ngIf="option == 2">
                 <div class="connections_title header">Your connections</div>
                 <div class="connections_content">
-                    <div class="connection">
+                    <div class="connection" *ngFor="let connection of connections">
                         <div class="conn_img">
                             <div *ngIf="connection.image; else elseBlock">
                                 <img [src]="connection.image" alt="">
                             </div>
-                            <ng-template #elseBlock><img src="../../../assets/defaultpng.png"></ng-template>
+                            <ng-template #elseBlock><img src="../../../assets/default_profile.jpg"></ng-template>
                         </div>
                         <div class="conn_name">
-                            Zakaria Zanati
-                        </div>
-                        <div class="conn_job">
-                            Software engineer
+                            {{connection.firstName}} {{connection.lastName}}
                         </div>
                         <div class="conn_view">
                             <button>View</button>
